--- a/templates/login.html
+++ b/templates/login.html
@@ -9,13 +9,20 @@
     <div style="text-align: center; margin-top: 100px;">
         <h2>Login</h2>
         <form method="POST">
+            {{ form.hidden_tag() }}
             <div style="margin-bottom: 10px;">
                 <label for="email">Email:</label><br>
-                <input type="email" id="email" name="email" required>
+                {{ form.email(size=30) }}
+                {% for error in form.email.errors %}
+                    <span style="color: red;">{{ error }}</span><br>
+                {% endfor %}
             </div>
             <div style="margin-bottom: 10px;">
                 <label for="password">Password:</label><br>
-                <input type="password" id="password" name="password" required>
+                {{ form.password(size=30) }}
+                {% for error in form.password.errors %}
+                    <span style="color: red;">{{ error }}</span><br>
+                {% endfor %}
             </div>
             <button type="submit">Log In</button>
             <p>Don't have an account? <a href="{{ url_for('register') }}">Register</a></p>
