made adjustments to update functionality

--- a/templates/home.html
+++ b/templates/home.html
@@ -61,7 +61,7 @@
           </div>
           <div class="modal-body">
             <form id="update-task-form">
-              <input type="hidden" id="event-id-update" value=""> <!-- Hidden input to store event ID -->
+              <input type="hidden" id="event-id" value=""> <!-- Hidden input to store event ID -->
   
               <div class="mb-3">
                 <label for="update-task-name" class="form-label">Task Name</label>
